修 IntentGoldenSet 丢顺序 + 钉住它，并订正一处注释里的分母
── 上一个提交红在哪 ─────────────────────────────────────────────
CI run 34035337220 红一条：
  accuracyBelowThresholdFails:155
  Expecting actual: ["INT-045","INT-037","INT-032","INT-026"]
  to contain exactly: ["INT-026","INT-032","INT-037","INT-045"]

反序。根因不在测试，在 IntentGoldenSet：byId 用了 Map.copyOf，
而 Map.copyOf 的迭代顺序不保证，那个类的 javadoc 却写着
「全部用例，按文件里的顺序」、groups() 写着「按首次出现顺序」。
所以那两个承诺一直是假的，漏判报告里的排列是哈希顺序的副产品。

这不影响 B4 的结论（召回率 25/25、探针 6 条、过度命中 0.200 都与顺序无关，
它们都是按 id 聚合的比例），但会让任何按顺序写的断言随机红。

改成 Collections.unmodifiableMap(new LinkedHashMap<>(byId))，
并新增 preservesYamlOrder 把这个不变量钉住——否则它还会回来。
这是本项目第三次踩 Map.copyOf / Set.copyOf 丢顺序
（前两次在 PromptRegistry 的 byName 与 availableVersions），
所以补了一条机械预检：Map/Set.copyOf 出现处若上文承诺了顺序就报出来。
扫全仓结果：剩两处 Map.copyOf（ConfigSnapshot、ActiveVersionSource.fixed）
都是纯查找表，不承诺顺序。List.copyOf 保序，不在检查范围内。

── 顺手订正 ─────────────────────────────────────────────────────
IntentRunTest.refusalRateIsReportedButNeverGated 的注释写的是
「拒答率 = 6/10 = 0.60」，而同一个方法里的断言是 6.0/11.0 与「拒答 0.545」。
断言是对的：分母是 accuracyDenom，refusal-heavy.yaml 共 11 条、
其中 6 条 OUT_OF_SCOPE、没有探针组，6/11 = 0.5455。错的只有注释。

预测：报告文件 35、测试总数 523（oncall-eval 34，ExecuteRecallGateTest 15）、
生产类 121。

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>